k8s/deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-pod-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-pod
  template:
    metadata:
      labels:
        app: my-pod
    spec:
      containers:
        - name: app
          image: theerisnet/goorm-docker-spring:multi
