k8s/pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: app
      image: theerisnet/goorm-docker-spring:multi
