k8s/pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-pod
spec:
  containers:
    - name: app
      image: theerisnet/goorm-docker-spring:multi
