k8s/service-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-pod-service
spec:
  selector:
    app: my-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
